<?xml version="1.0" encoding="utf-8"?>

<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Fragment.SettingFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/title_release_reminder"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorCokelat"
                    android:textSize="16sp"
                    android:textStyle="bold"/>
                <androidx.appcompat.widget.SwitchCompat
                    android:id="@+id/release_switch"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="5sp"
                    android:layout_marginBottom="5sp"
                    android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/release_reminder_desc"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:text="@string/title_daily_reminder"
                android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                android:textColor="@color/colorCokelat"
                android:textSize="16sp"
                android:textStyle="bold"/>
            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/daily_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="5sp"
                android:layout_marginTop="5sp"
                android:layout_marginBottom="5sp"
                android:switchTextAppearance="@style/TextAppearance.AppCompat.Small"
                android:text="@string/daily_reminder_desc"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10sp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginStart="5sp"
                    android:layout_marginTop="5sp"
                    android:text="@string/title_change_lang"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textColor="@color/colorCokelat"
                    android:textSize="16sp"
                    android:textStyle="bold"/>

                <TextView
                    android:id="@+id/text"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/change_lang"
                    android:layout_marginTop="5sp"
                    android:layout_marginStart="5sp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <RadioGroup
                    android:id="@+id/radiogrup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/text"
                    android:layout_margin="5sp">
                    <RadioButton
                        android:id="@+id/indo"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bahasa_indonesia"/>
                    <RadioButton
                        android:id="@+id/english"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:checked="true"
                        android:text="@string/bahasa_inggris"/>
                </RadioGroup>
                <Button
                    android:id="@+id/btn_bahasa"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/title_change_lang"
                    style="@style/Widget.AppCompat.Button"
                    android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    android:textColor="@color/colorCokelat"
                    android:background="@color/colorKuninglogo"
                    android:layout_marginEnd="5sp"
                    android:layout_marginBottom="5sp"
                    android:layout_gravity="end"/>
            </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</FrameLayout>