<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#7fefeded"
    tools:context=".Fragment.AboutFragment">

    <ScrollView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:scrollIndicators="right">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="3dp"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            android:id="@+id/card1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="7dp"
            android:layout_margin="5dp"
            android:background = "#00ffffff">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp">

                <ImageView
                    android:id="@+id/image_me"
                    android:layout_width="200dp"
                    android:layout_height="200dp"
                    android:layout_alignParentTop="true"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="12dp"
                    android:layout_marginBottom="12dp"
                    app:srcCompat="@drawable/ic_person" />

            </RelativeLayout>
        </androidx.cardview.widget.CardView>


        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardElevation="5dp"
            app:cardCornerRadius="7dp"
            android:layout_margin="5dp"
            android:background = "#00ffffff">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:id="@+id/text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:inputType="text"
                    android:singleLine="true"
                    android:text="@string/name"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:layout_marginTop="10dp"
                    android:hint="Nama Pembuat"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    android:textColor="#8b8a8a"
                    android:textSize="15sp"
                    android:layout_marginRight="5dp"
                    android:layout_alignRight="@+id/View" />

                <View
                    android:id="@+id/View"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/text"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="10dp"
                    android:background="#e0e1e1" />


                <TextView
                    android:id="@+id/text1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/View"
                    android:layout_marginLeft="10dp"
                    android:inputType="text"
                    android:text="@string/email"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/text1"
                    android:layout_alignBottom="@+id/text1"
                    android:layout_alignParentEnd="true"
                    android:layout_alignParentRight="true"
                    android:hint="namapembuat@email.com"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    android:textColor="#8b8a8a"
                    android:textSize="15sp"
                    android:layout_marginRight="10dp" />

                <View
                    android:id="@+id/View2"
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:layout_below="@+id/txt_email"
                    android:layout_marginHorizontal="5dp"
                    android:layout_marginVertical="10dp"
                    android:background="#e0e1e1" />

                <TextView
                    android:id="@+id/text2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/View2"
                    android:layout_marginLeft="10dp"
                    android:inputType="text"
                    android:text="@string/no_telp"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    android:textSize="15sp" />

                <TextView
                    android:id="@+id/txt_phone"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignBaseline="@+id/text2"
                    android:layout_alignParentEnd="true"
                    android:hint="08x xxx xxx xxx"
                    android:textAppearance="@style/TextAppearance.AppCompat.Light.Widget.PopupMenu.Large"
                    android:textColor="#8b8a8a"
                    android:textSize="15sp"
                    android:layout_marginRight="10dp"
                    android:layout_marginBottom="10dp"/>
            </RelativeLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
    </ScrollView>
</RelativeLayout>